# src/main/java/com/github/xild/verbose/pancake/model/Address.java
@@ -1,24 +1,21 @@
 package com.github.xild.verbose.pancake.model;
 
-import static javax.persistence.GenerationType.SEQUENCE;
-
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.SequenceGenerator;
 import javax.persistence.Table;
 
-import com.github.xild.verbose.pancake.model.to.AddressInput;
+import com.github.xild.verbose.pancake.model.to.AddressTO;
 
 @Entity(name = "Address")
 @Table(name = "ADDRESS")
-@SequenceGenerator(name = "SEQ_ADDRESS", sequenceName = "SEQ_ADDRESS", initialValue = 1, allocationSize = 1)
 public class Address implements com.github.xild.verbose.pancake.model.Entity {
 	private static final long serialVersionUID = 1L;
 
 	@Id
-	@GeneratedValue(strategy = SEQUENCE, generator = "SEQ_ADDRESS")
+	@GeneratedValue(strategy = GenerationType.AUTO)
 	private Long id;
 
 	@Column(name = "STREET", nullable = false)
@@ -46,8 +43,9 @@ public class Address implements com.github.xild.verbose.pancake.model.Entity {
 		super();
 	}
 
-	public Address(AddressInput input) {
+	public Address(AddressTO input) {
 		super();
+		this.id = input.getId();
 		this.street = input.getRua();
 		this.city = input.getCidade();
 		this.state = input.getEstado();
@@ -56,7 +54,6 @@ public class Address implements com.github.xild.verbose.pancake.model.Entity {
 		this.addressDetail = input.getComplemento();
 		this.neighborhood = input.getBairro();
 	}
-
 
 	public Long getId() {
 		return id;
@@ -127,6 +124,73 @@ public class Address implements com.github.xild.verbose.pancake.model.Entity {
 		return "Address [id=" + id + ", street=" + street + ", city=" + city + ", state=" + state + ", addressNumber="
 				+ addressNumber + ", zipCode=" + zipCode + ", addressDetail=" + addressDetail + ", neighborhood="
 				+ neighborhood + "]";
+	}
+
+	@Override
+	public int hashCode() {
+		final int prime = 31;
+		int result = 1;
+		result = prime * result + ((addressDetail == null) ? 0 : addressDetail.hashCode());
+		result = prime * result + ((addressNumber == null) ? 0 : addressNumber.hashCode());
+		result = prime * result + ((city == null) ? 0 : city.hashCode());
+		result = prime * result + ((id == null) ? 0 : id.hashCode());
+		result = prime * result + ((neighborhood == null) ? 0 : neighborhood.hashCode());
+		result = prime * result + ((state == null) ? 0 : state.hashCode());
+		result = prime * result + ((street == null) ? 0 : street.hashCode());
+		result = prime * result + ((zipCode == null) ? 0 : zipCode.hashCode());
+		return result;
+	}
+
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj)
+			return true;
+		if (obj == null)
+			return false;
+		if (getClass() != obj.getClass())
+			return false;
+		Address other = (Address) obj;
+		if (addressDetail == null) {
+			if (other.addressDetail != null)
+				return false;
+		} else if (!addressDetail.equals(other.addressDetail))
+			return false;
+		if (addressNumber == null) {
+			if (other.addressNumber != null)
+				return false;
+		} else if (!addressNumber.equals(other.addressNumber))
+			return false;
+		if (city == null) {
+			if (other.city != null)
+				return false;
+		} else if (!city.equals(other.city))
+			return false;
+		if (id == null) {
+			if (other.id != null)
+				return false;
+		} else if (!id.equals(other.id))
+			return false;
+		if (neighborhood == null) {
+			if (other.neighborhood != null)
+				return false;
+		} else if (!neighborhood.equals(other.neighborhood))
+			return false;
+		if (state == null) {
+			if (other.state != null)
+				return false;
+		} else if (!state.equals(other.state))
+			return false;
+		if (street == null) {
+			if (other.street != null)
+				return false;
+		} else if (!street.equals(other.street))
+			return false;
+		if (zipCode == null) {
+			if (other.zipCode != null)
+				return false;
+		} else if (!zipCode.equals(other.zipCode))
+			return false;
+		return true;
 	}
 
 }
